--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -61,6 +61,7 @@
 
   .footer__title {
     font-size: 13px;
+    padding-bottom: 13px;
   }
 
   .footer__container {
@@ -103,5 +104,10 @@
     gap: 20px;
     margin: 20px 0;
   }
+
+  .footer__title {
+    padding-bottom: 7px;
+  }
+
 
 }
