--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,5 @@
 .header {
+  background-color: #fafafa;
   padding-top: 18px;
   padding-right: 14px;
   padding-bottom: 18px;
@@ -12,6 +13,10 @@
 .header__logo {
   width: 38px;
   height: 38px;
+}
+
+.header__logo:hover{
+  opacity: .7;
 }
 
 .header__container {
