--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -4,11 +4,7 @@
   display: flex;
   width: 100%;
   max-width: 300px;
-  /*   margin: 0 auto; */
-  /*   grid-template-columns: 3fr 1fr;
-  grid-template-rows: 170px 1fr; */
   row-gap: 10px;
-  /* align-items: center; */
   flex-direction: column;
   align-items: flex-start;
   border-radius: 10px 10px 10px 10px;
@@ -27,6 +23,10 @@
   height: 100%;
   width: 100%;
   grid-column: 1 / 3;
+}
+
+.card__trailer-link:hover {
+  opacity: .9;
 }
 
 .card__name {
@@ -59,7 +59,7 @@
   background-color: transparent;
   padding: 0;
   position: absolute;
-  top: 183px;
+  top: 202px;
   right: 6px;
   border: none;
   min-width: 21px;
@@ -73,7 +73,6 @@
 }
 
 .card__btn_delete {
-  margin-top: 3px;
   background-size: contain;
   background-position: center;
   background-image: url(../../images/close.svg);
@@ -81,13 +80,13 @@
 
 .card__btn_saved {
   background-position: right;
-  background-image: url(../../images/saved.svg);
+  background-image: url(../../images/save.svg);
 }
 
 .card__btn_save {
   background-position: right;
   min-width: 72px;
-  background-image: url(../../images/save.svg);
+  background-image: url(../../images/saved.svg);
 }
 
 .card-action:hover {
@@ -113,7 +112,6 @@
   }
 
   .card__btn {
-    top: 202px;
     right: 5px;
     display: none;
   }
@@ -146,6 +144,10 @@
   .card__duration {
     min-width: 52px;
     justify-self: center;
+  }
+
+  .card__btn {
+    top: 165px;
   }
 
   .card__image {
