--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,8 +1,6 @@
 .movie {
-  margin: 0 auto;
   padding: 40px 0 10px 0;
   display: grid;
-  width: 93%;
   background-color: #fafafa;
 }
 
@@ -12,12 +10,13 @@
   margin: 0;
   display: grid;
   row-gap: 32px;
+  justify-items: center;
   grid-template-columns: repeat(auto-fill, minmax(285px, 1fr));
 }
 
 
 .movie__text {
-  font-size: 12;
+  font-size: 12px;
   margin: 0;
 }
 
@@ -25,8 +24,6 @@
 @media screen and (min-width: 520px) {
   .movie {
     padding-top: 67px;
-    padding-left: 29px;
-    padding-right: 30px;
   }
 
   .movie__list {
@@ -39,16 +36,14 @@
 @media screen and (min-width: 950px) {
   .movie {
     max-width: 1280px;
-    padding-top: 12px;
-    padding-left: 28px;
-    padding-right: 28px;
+    padding-top: 79px;
     box-sizing: border-box;
   }
 
   .movie__list {
     row-gap: 45px;
     column-gap: 22px;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(265px, 1fr));
   }
 
 }
