--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -6,6 +6,7 @@
   right: 0px;
   bottom: 0px;
   display: block;
+  align-items: center;
   opacity: 0;
   width: 65%;
   max-width: 100%;
@@ -103,6 +104,7 @@
 
 @media screen and (min-width: 950px) {
   .navigation {
+    background-color: transparent;
     position: relative;
     display: flex;
     justify-content: space-between;
@@ -110,7 +112,6 @@
     width: 100%;
     opacity: 1;
     transform: scale(1);
-
   }
 
   .navigation__close {
@@ -121,8 +122,6 @@
     flex-direction: row;
     margin-left: 45px;
   }
-
-
 
   .navigation__link {
     padding-bottom: 0;
