--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -57,7 +57,10 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  outline: none;
+}
+.profile__input:focus{
+  outline: .5px dotted rgba(52, 86, 243, .5);
+  border-radius: 3px;
 }
 
 .profile__input:disabled {
@@ -117,6 +120,10 @@
   font-size: 13px;
   font-weight: 400;
 
+}
+
+.profile__button:hover {
+  opacity: .8;
 }
 
 .profile__button-exit {
