--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,8 +1,8 @@
 .search {
   padding-top: 76px;
-  padding-right: 10px;
   padding-bottom: 55px;
-  padding-left: 10px;
+  border-bottom: 1px solid #e8e8e8;
+  background-color: #fafafa;
 }
 
 .search__form {
@@ -36,18 +36,19 @@
   width: 100%;
 }
 
+.search__input:focus {
+  outline: .5px dotted rgba(52, 86, 243, .5);
+  border-radius: 3px;
+}
+
 .search__container {
   display: flex;
   flex-direction: column;
 }
 
-.search__input:focus {
-  outline: none;
-}
-
 .search__button {
   border: 0;
-  margin: 6px;
+  margin: 0;
   min-width: 34px;
   min-height: 34px;
   cursor: pointer;
@@ -58,12 +59,14 @@
   background-position: center;
 }
 
+.search__button:hover {
+  opacity: .8;
+}
+
 @media screen and (min-width: 520px) {
   .search {
     padding-top: 74px;
     padding-bottom: 120px;
-    padding-left: 30px;
-    padding-right: 30px;
   }
 
   .search__input {
@@ -91,13 +94,13 @@
   }
 
   .search__container {
-    box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.08);
+    background-color: #fff;
+    box-shadow: 0px 3px 14px 0px rgba(0, 0, 0, 0.08);
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    border-radius: 10px 10px 0 0;
-    padding-bottom: 110px;
+    border-radius: 10px;
   }
 }
 
@@ -105,14 +108,9 @@
   .search {
     padding-top: 64px;
     padding-bottom: 69px;
-    padding-left: 70px;
-    padding-right: 70px;
   }
 
   .search__form {
     max-width: 876px;
-  }
-  .search__container {
-    padding-bottom: 66px;
   }
 }
