--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -90,7 +90,8 @@
       "about photo"
       "description photo"
       "link photo";
-    grid-template-columns: repeat(auto-fit, minmax(310px, 1fr));
+     grid-template-columns: repeat(auto-fit,minmax(185px,1fr));
+    grid-templa
     grid-template-rows: repeat(auto-fill, minmax(20px, 36px));
     column-gap: 49px;
     row-gap: 0px;
