--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -41,7 +41,7 @@
   .movies {
     padding-left: 70px;
     padding-right: 70px;
-    margin-bottom: 7px;
+    padding-bottom: 7px;
   }
 
   .movies-main__button-more {
