--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -17,6 +17,7 @@
   aspect-ratio: 1 / 1;
   width: 100%;
   grid-column: 1 / 3;
+  min-height: 190px;
 }
 
 .card__trailer-link {
@@ -31,11 +32,11 @@
 
 .card__name {
   text-overflow: ellipsis;
-  white-space: nowrap;
   margin: 0;
   font-size: 13px;
   font-weight: 500;
   margin-left: 10px;
+  margin-right: 50px;
 }
 
 .card__duration {
