--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -77,8 +77,7 @@
 }
 
 .profile__error {
-  width: 100%;
-  min-height: 186px;
+  max-width: 90%;
   color: #FF004C;
   text-align: center;
   font-family: Inter;
@@ -122,6 +121,10 @@
 
 }
 
+.profile__button_disabled {
+  color: #c2c2c2;
+}
+
 .profile__button:hover {
   opacity: .8;
 }
@@ -153,9 +156,9 @@
     margin-top: 123px;
   }
 
-  .profile__error {
+/*   .profile__error {
     margin-top: 92px;
-  }
+  } */
 }
 
 @media screen and (min-width: 950px) {
