--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -17,7 +17,7 @@
   aspect-ratio: 1 / 1;
   width: 100%;
   grid-column: 1 / 3;
-  min-height: 190px;
+  min-height: 151px;
 }
 
 .card__trailer-link {
@@ -153,5 +153,11 @@
 
   .card__image {
     height: 151px;
+  }
+}
+
+@media screen and (min-width:1260px) {
+  .card__btn {
+    top: 178px;
   }
 }
