--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -20,7 +20,8 @@
   justify-content: center;
   align-items: center;
   min-width: 260px;
-  gap: 17px;
+  /* gap: 17px; */
+  gap: 5px;
 }
 
 .profile__input-container:first-of-type {
